# function_approximation_with_regression_analysis

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: calc.h  main.c  regression.c  regression.h  run_regression.c
